# Rust-Vault-Encryption-Cli

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: automerge.yml  rust-clippy.yml
src/: encryptionFunctions.rs  functions.rs  main.rs  masterfile.rs  vault.rs
