[package]
name = "rusty-vault"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = { version = "0.9.0", features = ["stream"] }
anyhow = "1.0"
rand = "0.8"
zeroize = "1.4"
rust-argon2 = "1.0"
rpassword = "6.0.1"
shellexpand = "2.1.0"
hex = "0.4.3"
colored="2.0.0"
sha2="0.10.2"